script tính can chi và sửa lại css của web dirtycoins

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
+    <link rel="shortcut icon" href="//bizweb.dktcdn.net/100/369/010/themes/914385/assets/favicon.png?1689564929901" type="image/png">
     <script src="./script.js"></script>
     <link rel="stylesheet" href="style.css" />
   </head>
