--- a/index.html
+++ b/index.html
@@ -45,10 +45,11 @@
         </div>
       </div>
     </div>
-    <div class="move">
+    
       <div class="collection">
         <h1>COLLAB'S</h1>
       </div>
+      <div class="move"></div>
       <div class="main">
         <div class="custom">
           <div class="customleft">
@@ -76,6 +77,7 @@
               </div>
               <div class="imageproduct">
                 <img
+                  style="opacity: 0.6"
                   src="https://bizweb.dktcdn.net/100/369/010/products/1-5.jpg?v=1686560543000"
                 />
               </div>
