clone dirtycoin có thêm xóa sửa giỏ hàng

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
       href="//bizweb.dktcdn.net/100/369/010/themes/914385/assets/favicon.png?1689564929901"
       type="image/png"
     />
-    <script src="./script.js"></script>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -39,314 +38,128 @@
         </div>
         <div class="icon">
           <span class="material-symbols-outlined"> person </span>
-          <span class="material-symbols-outlined"> local_mall </span>
+          <span class="material-symbols-outlined" id="localMallBtn">
+            local_mall
+          </span>
           <a>Vi</a>
           <a>En</a>
         </div>
-      </div>
-    </div>
-    
-      <div class="collection">
-        <h1>COLLAB'S</h1>
-      </div>
-      <div class="move"></div>
-      <div class="main">
-        <div class="custom">
-          <div class="customleft">
-            <h2>Lọc giá</h2>
-            <h2>Loại</h2>
-            <h2>Kích thước</h2>
-            <h2>Màu sắc</h2>
-          </div>
-          <div class="customright">
-            <select name="thứ tự">
-              <option value="Thứ tự">Thứ tự</option>
-              <option value="Mới nhất">Mới nhất</option>
-              <option value="Giá tăng dần">Giá tăng dầ</option>
-              <option value="Giá giảm dần">Giá giảm dần</option>
-            </select>
-          </div>
-        </div>
-        <div class="product">
-          <div class="row1">
-            <div class="product-item">
-              <div class="status">
-                <p>sold out</p>
-                <p>50 pcs</p>
-                <p>Collab</p>
-              </div>
-              <div class="imageproduct">
-                <img
-                  style="opacity: 0.6"
-                  src="https://bizweb.dktcdn.net/100/369/010/products/1-5.jpg?v=1686560543000"
-                />
-              </div>
-              <div class="name">
-                <p>DC x LW Love Varsity Jacket</p>
-              </div>
-              <div class="price">
-                <p>1.590.000₫</p>
-              </div>
-            </div>
-            <div class="product-item">
-              <div class="status">
-                <p>New arrival</p>
-              </div>
-              <div class="imageproduct">
-                <img
-                  src="https://bizweb.dktcdn.net/100/369/010/products/1-7329d9a4-8c70-482a-b945-63c862b5239f.jpg?v=1686415995000"
-                />
-              </div>
-              <div class="name">
-                <p>DC x OP Ace T-shirt - Cream</p>
-              </div>
-              <div class="price">
-                <p>450.000₫</p>
-              </div>
-            </div>
-            <div class="product-item">
-              <div class="status">
-                <p>Collab</p>
-              </div>
-              <div class="imageproduct">
-                <img
-                  src="https://bizweb.dktcdn.net/100/369/010/products/1-f2d92232-daac-44a6-b8f1-4d11b9055c2e.jpg?v=1682153227000"
-                />
-              </div>
-              <div class="name">
-                <p>DC x OP Sanji Chibi T-shirt - White</p>
-              </div>
-              <div class="price">
-                <p>450.000₫</p>
-              </div>
-            </div>
-            <div class="product-item">
-              <div class="status">
-                <p>Collab</p>
-              </div>
-              <div class="imageproduct">
-                <img
-                  src="https://bizweb.dktcdn.net/100/369/010/products/1-201abb96-56c5-42c0-a3e8-0d2b7466761f.jpg?v=1682663055000"
-                />
-              </div>
-              <div class="name">
-                <p>DC x OP Luffy Dream T-shirt</p>
-              </div>
-              <div class="price">
-                <p>450.000₫</p>
-              </div>
-            </div>
-          </div>
-          <div class="row1">
-            <div class="product-item">
-              <div class="status">
-                <p>Collab</p>
-              </div>
-              <div class="imageproduct">
-                <img
-                  src="https://bizweb.dktcdn.net/100/369/010/products/artboard-1-1.jpg?v=1678256256000"
-                />
-              </div>
-              <div class="name">
-                <p>DC x OPF:R Tote Bag - Cream</p>
-              </div>
-              <div class="price">
-                <p>250.000₫</p>
-              </div>
-            </div>
-            <div class="product-item">
-              <div class="status">
-                <p>Collab</p>
-              </div>
-              <div class="imageproduct">
-                <img
-                  src="https://bizweb.dktcdn.net/100/369/010/products/1-1aa78a18-350b-4cc8-b04f-b751f191a202.jpg?v=1678335048000"
-                />
-              </div>
-              <div class="name">
-                <p>DC x OPF:R The Crew T-shirt</p>
-              </div>
-              <div class="price">
-                <p>450.000₫</p>
-              </div>
-            </div>
-            <div class="product-item">
-              <div class="status">
-                <p>Collab</p>
-              </div>
-              <div class="imageproduct">
-                <img
-                  src="https://bizweb.dktcdn.net/100/369/010/products/1-8adba28c-786a-49e7-9e32-7cbb93166f31.jpg?v=1678260141000"
-                />
-              </div>
-              <div class="name">
-                <p>DC x OPF:R Luffy T-shirt - Cream</p>
-              </div>
-              <div class="price">
-                <p>420.000₫</p>
-              </div>
-            </div>
-            <div class="product-item">
-              <div class="status">
-                <p>Collab</p>
-              </div>
-              <div class="imageproduct">
-                <img
-                  src="https://bizweb.dktcdn.net/100/369/010/products/1-3b9cd100-dd59-43e0-9ed5-9a5285383290.jpg?v=1678260728000"
-                />
-              </div>
-              <div class="name">
-                <p>DC x OPF:R Shanks T-shirt - Cream</p>
-              </div>
-              <div class="price">
-                <p>450.000₫</p>
-              </div>
-            </div>
-          </div>
-          <div class="row1">
-            <div class="product-item">
-              <div class="status">
-                <p>Collab</p>
-              </div>
-              <div class="imageproduct">
-                <img
-                  src="https://bizweb.dktcdn.net/100/369/010/products/1-68dffd52-f0fd-44fd-afe0-bc08033c93d9.jpg?v=1678260406000"
-                />
-              </div>
-              <div class="name">
-                <p>DC x OPF:R Zoro T-shirt - Black</p>
-              </div>
-              <div class="price">
-                <p>420.000₫</p>
-              </div>
-            </div>
-            <div class="product-item">
-              <div class="status">
-                <p>Collab</p>
-              </div>
-              <div class="imageproduct">
-                <img
-                  src="https://bizweb.dktcdn.net/100/369/010/products/1-5-cee20adb-bbae-4ee9-97a6-4715582897b0.jpg?v=1678260171000"
-                />
-              </div>
-              <div class="name">
-                <p>DC x OPF:R Nami T-shirt - White</p>
-              </div>
-              <div class="price">
-                <p>420.000₫</p>
-              </div>
-            </div>
-            <div class="product-item">
-              <div class="status">
-                <p>limited</p>
+        <dialog id="myModal">
+          <h2>Giỏ hàng</h2>
 
-                <p>Collab</p>
-              </div>
-              <div class="imageproduct">
-                <img
-                  src="https://bizweb.dktcdn.net/100/369/010/products/23-bfa57181-d541-44ae-96cc-ae4377c7ea33.jpg?v=1678346493000"
-                />
-              </div>
-              <div class="name">
-                <p>DC x OP Luffy Raglan Hoodie - White</p>
-              </div>
-              <div class="price">
-                <p>699.000₫</p>
-              </div>
-            </div>
-            <div class="product-item">
-              <div class="status">
-                <p>limited</p>
-                <p>Collab</p>
-              </div>
-              <div class="imageproduct">
-                <img
-                  src="https://bizweb.dktcdn.net/100/369/010/products/artboard-1-a1cd5e2c-253e-4287-99bc-f571f8bec050.jpg?v=1678346490000"
-                />
-              </div>
-              <div class="name">
-                <p>DC x OP Luffy Raglan Hoodie - Multicolor</p>
-              </div>
-              <div class="price">
-                <p>720.000₫</p>
-              </div>
-            </div>
+          <div class="listsanpham"></div>
+
+          <div class="bill-input">
+            <!-- <div class="text-bill">
+              <p>Tổng tiền:</p>
+            </div> -->
           </div>
+          <div class="btn">
+            <button id="closeModalBtn">Đóng</button>
+            <button id="confirmBtn">Đặt hàng</button>
+          </div>
+        </dialog>
+      </div>
+    </div>
+
+    <div class="collection">
+      <h1>COLLAB'S</h1>
+    </div>
+    <div class="move"></div>
+    <div class="main">
+      <div class="custom">
+        <div class="customleft">
+          <h2>Lọc giá</h2>
+          <h2>Loại</h2>
+          <h2>Kích thước</h2>
+          <h2>Màu sắc</h2>
         </div>
-        <div class="top-footer">
-          <img src="./phone-call.png" />
-          <p>Hỗ trợ/ Mua hàng: <a class="sdt"> 0933 800 190</a></p>
+        <div class="customright">
+          <select name="thứ tự">
+            <option value="Thứ tự">Thứ tự</option>
+            <option value="Mới nhất">Mới nhất</option>
+            <option value="Giá tăng dần">Giá tăng dần</option>
+            <option value="Giá giảm dần">Giá giảm dần</option>
+          </select>
         </div>
-        <div class="footer">
-          <div class="contact">
-            <p class="headerfooter">Hệ Thống Cửa Hàng</p>
-            <div class="location">
-              <span class="material-symbols-outlined"> location_on </span>
-              <p>Chi nhánh Hồ Chí Minh</p>
-            </div>
-            <div class="adress">
-              <p>Quận 10 - 561 Sư Vạn Hạnh, Phường 13</p>
-              <p>Quận 1 - The New Playground 26 Lý Tự Trọng, Phường Bến Nghé</p>
-              <p>
-                Quận 1 - Central Market 4 Phạm Ngũ Lão, Phường Phạm Ngũ Lão.
-              </p>
-              <p>Quận Gò Vấp - 41 Quang Trung, Phường 3.</p>
-              <p>Quận Gò Vấp - 326 Quang Trung, Phường 10</p>
-            </div>
-            <div class="location">
-              <span class="material-symbols-outlined"> location_on </span>
-              <p>Chi nhánh Biên Hòa</p>
-            </div>
-            <div class="adress">
-              <p>TP. Biên Hòa - 151A Phan Trung, Phường Tân Mai.</p>
-            </div>
-            <div class="location">
-              <span class="material-symbols-outlined"> location_on </span>
-              <p>Chi nhánh Bình Dương</p>
-            </div>
-            <div class="adress">
-              <p>TP. Thủ Dầu Một - 28 Yersin, Phường Hiệp Thành.</p>
-            </div>
-            <div class="location">
-              <span class="material-symbols-outlined"> location_on </span>
-              <p>Chi nhánh Cần Thơ</p>
-            </div>
-            <div class="adress">
-              <p>Quận Ninh Kiều - 52 Mậu Thân, Phường An Phú.</p>
-            </div>
-            <div class="location">
-              <span class="material-symbols-outlined"> location_on </span>
-              <p>Chi nhánh Hà Nội</p>
-            </div>
-            <div class="adress">
-              <p>Đống Đa - 49-51 Hồ Đắc Di, Phường Nam Đồng.</p>
-            </div>
-          </div>
-          <div class="footer-contact">
-            <div class="social">
-              <h3>Mạng Xã Hội</h3>
-            </div>
-            <div class="iconsocial">
-              <img src="./facebook.png" />
-              <img src="./youtube.png" />
-              <img src="./instagram.png" />
-            </div>
-            <div class="support">
-              <h3>Chính Sách</h3>
-              <ul class="listsupport">
-                <li>Chính sách bảo mật</li>
-                <li>FAQ</li>
-                <li>Chính sách bảo hành & đổi trả</li>
-                <li>Chính sách giao hàng hỏa tốc</li>
-              </ul>
-            </div>
-          </div>
-          <div class="fanpage">
-            <h3>Fanpage</h3>
-            <div class="imgfanpage"><img src="./fanpage.png" /></div>
-          </div>
+      </div>
+      <div class="product">
+        <div class="row1">
+          <!-- <div class="product-item"></div> -->
         </div>
       </div>
     </div>
+    <div class="top-footer">
+      <img src="./phone-call.png" />
+      <p>Hỗ trợ/ Mua hàng: <a class="sdt"> 0933 800 190</a></p>
+    </div>
+    <div class="footer">
+      <div class="contact">
+        <p class="headerfooter">Hệ Thống Cửa Hàng</p>
+        <div class="location">
+          <span class="material-symbols-outlined"> location_on </span>
+          <p>Chi nhánh Hồ Chí Minh</p>
+        </div>
+        <div class="adress">
+          <p>Quận 10 - 561 Sư Vạn Hạnh, Phường 13</p>
+          <p>Quận 1 - The New Playground 26 Lý Tự Trọng, Phường Bến Nghé</p>
+          <p>Quận 1 - Central Market 4 Phạm Ngũ Lão, Phường Phạm Ngũ Lão.</p>
+          <p>Quận Gò Vấp - 41 Quang Trung, Phường 3.</p>
+          <p>Quận Gò Vấp - 326 Quang Trung, Phường 10</p>
+        </div>
+        <div class="location">
+          <span class="material-symbols-outlined"> location_on </span>
+          <p>Chi nhánh Biên Hòa</p>
+        </div>
+        <div class="adress">
+          <p>TP. Biên Hòa - 151A Phan Trung, Phường Tân Mai.</p>
+        </div>
+        <div class="location">
+          <span class="material-symbols-outlined"> location_on </span>
+          <p>Chi nhánh Bình Dương</p>
+        </div>
+        <div class="adress">
+          <p>TP. Thủ Dầu Một - 28 Yersin, Phường Hiệp Thành.</p>
+        </div>
+        <div class="location">
+          <span class="material-symbols-outlined"> location_on </span>
+          <p>Chi nhánh Cần Thơ</p>
+        </div>
+        <div class="adress">
+          <p>Quận Ninh Kiều - 52 Mậu Thân, Phường An Phú.</p>
+        </div>
+        <div class="location">
+          <span class="material-symbols-outlined"> location_on </span>
+          <p>Chi nhánh Hà Nội</p>
+        </div>
+        <div class="adress">
+          <p>Đống Đa - 49-51 Hồ Đắc Di, Phường Nam Đồng.</p>
+        </div>
+      </div>
+      <div class="footer-contact">
+        <div class="social">
+          <h3>Mạng Xã Hội</h3>
+        </div>
+        <div class="iconsocial">
+          <img src="./facebook.png" />
+          <img src="./youtube.png" />
+          <img src="./instagram.png" />
+        </div>
+        <div class="support">
+          <h3>Chính Sách</h3>
+          <ul class="listsupport">
+            <li>Chính sách bảo mật</li>
+            <li>FAQ</li>
+            <li>Chính sách bảo hành & đổi trả</li>
+            <li>Chính sách giao hàng hỏa tốc</li>
+          </ul>
+        </div>
+      </div>
+      <div class="fanpage">
+        <h3>Fanpage</h3>
+        <div class="imgfanpage"><img src="./fanpage.png" /></div>
+      </div>
+    </div>
+    <script src="script.js"></script>
   </body>
 </html>
